--- a/readme.adoc
+++ b/readme.adoc
@@ -1,8 +1,6 @@
 # Android Document Scanner Library
 
-image::https://img.shields.io/badge/version-1.5.2-green.svg[]
-image::https://img.shields.io/badge/minSDK-19-blue.svg[]
-image::https://img.shields.io/badge/license-MIT-yellowgreen.svg[]
+[![](https://jitpack.io/v/MazenRashedMawdoo3/AndroidDocumentScanner.svg)](https://jitpack.io/#MazenRashedMawdoo3/AndroidDocumentScanner)
 
 This library helps you to scan any document like CamScanner.
 
@@ -38,7 +36,7 @@ Add lines below to your *app* level build.gradle
 [source,bourne]
 ----
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
-    implementation 'com.github.mayuce:AndroidDocumentScanner:1.5.2'
+    implementation 'com.github.MazenRashedMawdoo3:AndroidDocumentScanner:Tag'
 ----
 
 And Sync the gradle
